# shaderDemo

./: .gitignore  .windsurfrules  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  README.md  main.cpp
computeRenderer/: Renderer.cpp  Renderer.h
reader/: ImageLoader.cpp  ImageLoader.h
render/: Renderer.cpp  Renderer.h
